# CardTag-Epitech

./: LICENSE.txt  README.md  nfc-sync.py  pyproject.toml
